[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/sound/jump.wav" type="AudioStream" id=1]
[ext_resource path="res://script/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/kenney_toon-characters-1/Female adventurer/Tilesheet/character_femaleAdventurer_sheet_kiri.png" type="Texture" id=3]
[ext_resource path="res://assets/sound/hitmeteor.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/walk.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/kenney_toon-characters-1/Female adventurer/Tilesheet/character_femaleAdventurer_sheet.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.5, 55 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 576, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 672, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 384, 96, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 384, 96, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 384, 96, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "diri_kanan",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "diri_kiri",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "jalan_kanan",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "jalan_kiri",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "lompat_kanan",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 36.5, 55 )

[node name="Player2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 8 )
animation = "diri_kanan"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -156, -71 )
stream = ExtResource( 1 )

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -156, -71 )
stream = ExtResource( 5 )

[node name="HitMeteor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( -0.5, 0 )
shape = SubResource( 23 )

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
